# bouncy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  ROADMAP.md  THIRD-PARTY-NOTICES.md  about.hbs  about.toml
.cargo/: config.toml
.github/workflows/: build.yml  docs.yml
src/: app.rs  audio.rs  capture.rs  color.rs  config.rs  explosion.rs  gui.rs  lib.rs  main.rs  midi.rs  perf.rs  physics.rs  presets.rs  render.rs  sim.rs  text.rs  web.rs
web/: README.md  build.sh  coi.js  controls.js  index.html  style.css
