[package]
name = "bouncy"
version = "0.7.0"
edition = "2021"
rust-version = "1.85"
authors = ["James O. Schreckengast"]
license = "MIT"
description = "GPU-accelerated particle simulation with elastic collisions, gravity, and explosive chain reactions"
repository = "https://github.com/schreck61/bouncy"
keywords = ["simulation", "particles", "physics", "graphics", "game"]
categories = ["games", "graphics", "simulation"]

[dependencies]
pixels = "0.15"
winit = "0.30"
rand = "0.9"
pollster = "0.4"
rodio = { version = "0.21", default-features = false, features = ["playback"] }
softbuffer = "0.4"
ouroboros = "0.18"
clap = { version = "4.6", features = ["derive"] }
ab_glyph = "0.2"

[profile.release]
lto = "thin"
