[package]
name = "bouncy"
version = "1.0.2"
edition = "2024"
rust-version = "1.85"
authors = ["James O. Schreckengast"]
license = "MIT"
description = "GPU-accelerated particle simulation with elastic collisions, gravity, and explosive chain reactions"
repository = "https://github.com/schreck61/bouncy"
keywords = ["simulation", "particles", "physics", "graphics", "game"]
categories = ["games", "graphics", "simulation"]

[dependencies]
pixels = "0.15"
winit = "0.30"
rand = "0.9"
rodio = { version = "0.21", default-features = false, features = ["playback"] }
softbuffer = "0.4"
ouroboros = "0.18"
clap = { version = "4.6", features = ["derive"] }
ab_glyph = "0.2"
toml = "0.8"
dirs = "6"
png = "0.17"
rayon = "1.12.0"

[lints.clippy]
# Pedantic is enforced (CI runs clippy with -D warnings), with deliberate
# exceptions:
pedantic = { level = "warn", priority = -1 }
float_cmp = "allow"             # tests assert exact grid-snapped/clamped values
similar_names = "allow"         # x1/x2, px/py physics naming is domain idiom
struct_excessive_bools = "allow" # Config mirrors the CLI flag schema
too_many_lines = "allow"        # match-heavy dispatchers read better whole

[profile.release]
lto = "thin"
