[package]
name = "bouncy"
version = "1.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["James O. Schreckengast"]
license = "MIT"
description = "GPU-accelerated particle simulation with elastic collisions, gravity, and explosive chain reactions"
repository = "https://github.com/schreck61/bouncy"
keywords = ["simulation", "particles", "physics", "graphics", "game"]
categories = ["games", "graphics", "simulation"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Multi-threaded WebAssembly: rayon over wasm threads. Requires a
# cross-origin-isolated page, a nightly toolchain, and -Zbuild-std
# (see web/README.md). Without it, wasm builds take the serial paths.
web-threads = ["dep:wasm-bindgen-rayon"]

[dependencies]
winit = "0.30"
rand = "0.9"
clap = { version = "4.6", features = ["derive"] }
ab_glyph = "0.2"
toml = "0.8"
png = "0.17"
rayon = "1.12.0"
# Re-exports std::time::Instant on native; performance.now() on wasm.
web-time = "1.1"

# Native-only: window surfaces, audio devices, config-dir discovery.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pixels = "0.15"
softbuffer = "0.4"
ouroboros = "0.18"
rodio = { version = "0.21", default-features = false, features = ["playback"] }
dirs = "6"

# Web-only: the JS boundary and the Canvas2D backend.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
# no-bundler: the demo loads plain ES modules (wasm-bindgen --target web).
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"], optional = true }
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlCanvasElement",
    "CanvasRenderingContext2d", "ImageData", "console", "DomRect",
    "CssStyleDeclaration",
    # WebAudio backend
    "AudioContext", "AudioContextOptions", "AudioBuffer",
    "AudioBufferSourceNode", "AudioDestinationNode", "AudioNode",
    "AudioParam", "StereoPannerNode",
] }

[lints.clippy]
# Pedantic is enforced (CI runs clippy with -D warnings), with deliberate
# exceptions:
pedantic = { level = "warn", priority = -1 }
float_cmp = "allow"             # tests assert exact grid-snapped/clamped values
similar_names = "allow"         # x1/x2, px/py physics naming is domain idiom
struct_excessive_bools = "allow" # Config mirrors the CLI flag schema
too_many_lines = "allow"        # match-heavy dispatchers read better whole
# The lib target exists so the wasm shell can share the modules; these are
# published-API lints and this is an application, not a library API:
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
